add custom fields message on slide create admin view

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-create/blur-elysium-slides-create.twig
@@ -96,6 +96,15 @@
 
                     </sw-card>
                 {% endblock %}
+
+                {% block blur_elysium_slides_create_card_custom_fields %}
+                    <sw-card :title="$tc('BlurElysiumSlides.customFields.cardTitle')"
+                            :isLoading="isLoading">
+                        <sw-alert variant="info" appearance="default" :showIcon="true" :closable="false">
+                            {{ $tc('BlurElysiumSlides.customFields.onCreateMessage') }}
+                        </sw-alert>
+                    </sw-card>
+                {% endblock %}
             </div>
         </template>
 
