change component preview image

--- a/src/Resources/app/administration/src/module/sw-cms/blocks/text-image/blur-elysium-slider-block/preview/sw-cms-preview-blur-elysium-slider-block.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/blocks/text-image/blur-elysium-slider-block/preview/sw-cms-preview-blur-elysium-slider-block.twig
@@ -3,7 +3,7 @@
 
         {% block blur_cms_block_elysium_slider_preview %}
             <img class="sw-cms-preview-blur-elysium-slider-block__preview-image" 
-                :src="'blurelysiumslider/static/img/component-preview-image.png' | asset">
+                :src="'blurelysiumslider/static/img/component-preview-image.svg' | asset">
         {% endblock %}
     </div>
 {% endblock %}
