--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -108,11 +108,16 @@
                     <sw-card :title="$tc('BlurElysiumSlides.customFields.cardTitle')"
                             v-if="customFieldSets !== undefined"
                             :isLoading="isLoading">
+
                         <sw-custom-field-set-renderer
-                            v-if="blurElysiumSlide"
+                            v-if="customFieldSets.length > 0"
                             :entity="blurElysiumSlide"
                             :sets="customFieldSets">
                         </sw-custom-field-set-renderer>
+
+                        <sw-alert v-else variant="warning" appearance="default" :showIcon="true" :closable="false">
+                            {{ $tc('BlurElysiumSlides.customFields.emptyFieldSet') }}
+                        </sw-alert>
                     </sw-card>
                 {% endblock %}
 
