add entity to unscoped global search in admin

--- a/src/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/src/Resources/app/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -1,8 +1,8 @@
-{% block sw_search_bar_item_cms_page %}
+{% block sw_search_bar_item_order %}
     {% parent %}
 
     <router-link v-else-if="type === 'blur_elysium_slides'"
-                 v-bind:to="{ name: 'blur.elysium.slides.index', params: { id: item.id } }"
+                 v-bind:to="{ name: 'blur.elysium.slides.detail', params: { id: item.id } }"
                  ref="routerLink"
                  class="sw-search-bar-item__link">
 
