move slides detail content into tabs

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/component/blur-elysium-slides-basic-form/blur-elysium-slides-basic-form.twig
@@ -2,25 +2,48 @@
     <sw-container columns="1fr" gap="0 32px">
 
         {% block blur_elysium_slides_input_name %}
-            <sw-text-field
-                v-model="blurElysiumSlides.name"
-                required
-                :label="$tc('BlurElysiumSlides.baseForm.labelInput.title')"
-                :placeholder="$tc('BlurElysiumSlides.baseForm.labelInput.placeholder')"
-                :help-text="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')"
-                :error="blurElysiumSlidesNameError"
-            />
+            <div class="sw-field sw-block-field sw-contextual-field sw-field--text sw-field--default">
+                <div class="sw-field__label">
+                    <label>{{ $tc('BlurElysiumSlides.baseForm.labelInput.title') }}</label>
+                    <sw-help-text 
+                        :text="$tc('BlurElysiumSlides.baseForm.labelInput.helpText')" 
+                        :width="200" 
+                        tooltipPosition="top" 
+                        :showDelay="100" 
+                        :hideDelay="100">
+                    </sw-help-text>
+                </div>
+                <div class="sw-block-field__block">
+                    <input 
+                        type="text" 
+                        required
+                        :placeholder="$tc('BlurElysiumSlides.baseForm.labelInput.placeholder')"
+                        name="blurElysiumSlides.name" 
+                        v-model="blurElysiumSlides.name" />
+                </div>
+            </div>
         {% endblock %}
 
         {% block blur_elysium_slides_input_title %}
-            <sw-field
-                v-model="blurElysiumSlides.title"
-                type="text"
-                requi
-                :label="$tc('BlurElysiumSlides.baseForm.titleInput.title')"
-                :placeholder="$tc('BlurElysiumSlides.baseForm.titleInput.placeholder')"
-                :help-text="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')"
-            />
+            <div class="sw-field sw-block-field sw-contextual-field sw-field--text sw-field--default">
+                <div class="sw-field__label">
+                    <label>{{ $tc('BlurElysiumSlides.baseForm.titleInput.title') }}</label>
+                    <sw-help-text 
+                        :text="$tc('BlurElysiumSlides.baseForm.titleInput.helpText')" 
+                        :width="200" 
+                        tooltipPosition="top" 
+                        :showDelay="100" 
+                        :hideDelay="100">
+                    </sw-help-text>
+                </div>
+                <div class="sw-block-field__block">
+                    <input 
+                        type="text" 
+                        :placeholder="$tc('BlurElysiumSlides.baseForm.titleInput.placeholder')"
+                        name="blurElysiumSlides.title" 
+                        v-model="blurElysiumSlides.title" />
+                </div>
+            </div>
         {% endblock %}
 
         {% block blur_elysium_slides_input_description %}
