--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.scss
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.scss
@@ -1,10 +1,16 @@
-.blur-slysium-slides-create__main-content {
-    padding: 2.5rem 1rem 4rem;
-}
-
 .blur-slysium-slides-detail__header-actions-container {
 
     .sw-button {
         margin: 0 !important;
+    }
+}
+
+.blur-elysium-slider__detail-tabs {
+    padding: 2.5rem 1rem 4rem;
+
+    .sw-tabs__content {
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
