--- a/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-blur-elysium-slider.html.twig
@@ -69,7 +69,8 @@
 
                                 {% block cms_element_blur_elysium_slide_include %}
                                     {% sw_include '@Storefront/storefront/element/blur-elysium-slide.html.twig' with {
-                                        slide: slide
+                                        slide: slide,
+                                        imageFlowMode: element.translated.config.imageFlowMode.value
                                     } only %}
                                 {% endblock %}        
                             </div>
