--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -89,6 +89,14 @@
                                                         class="bc-field__no-margin">
                                                     </sw-switch-field>
                                                 {% endblock %}
+
+                                                {% block blur_cms_config_elysium_slider_image_flow_mode %}
+                                                    <sw-switch-field 
+                                                        :label="$tc('blurElysiumSlider.cmsElement.config.imageFlowMode.label')"
+                                                        v-model="element.config.imageFlowMode.value"
+                                                        class="bc-field__no-margin">
+                                                    </sw-switch-field>
+                                                {% endblock %}
                                             </div>
 
                                             <div>
