fix #14 slide cover upload bug

--- a/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
+++ b/src/Resources/app/administration/src/module/blur-elysium-slides/page/blur-elysium-slides-detail/blur-elysium-slides-detail.twig
@@ -126,7 +126,7 @@
                                                 <sw-upload-listener
                                                     :upload-tag="uploadTag"
                                                     auto-upload
-                                                    @media-upload-finish="setMediaItem"
+                                                    @media-upload-finish="onUploadMedia"
                                                 />
                                                 <sw-media-upload-v2
                                                     :disabled="!acl.can('blur_slides_elysium.editor')"
