add image flow helptext and improve translations

--- a/src/Resources/app/administration/src/assets/scss/components.scss
+++ b/src/Resources/app/administration/src/assets/scss/components.scss
@@ -20,6 +20,17 @@
     margin: 0;
 }
 
+.bc-field__inline-helptext {
+
+    .sw-field__label {
+        
+        label {
+            margin-right: 0;
+            padding-right: 1rem;
+        }
+    }
+}
+
 .bc-field__px-1 {
     padding-top: 1rem;
     padding-bottom: 1rem;
