--- a/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
+++ b/src/Resources/app/administration/src/module/sw-cms/elements/blur-elysium-slider/config/blur-cms-el-config-elysium-slider.twig
@@ -92,9 +92,10 @@
 
                                                 {% block blur_cms_config_elysium_slider_image_flow_mode %}
                                                     <sw-switch-field 
+                                                        :help-text="$tc('blurElysiumSlider.cmsElement.config.imageFlowMode.helpText')"
                                                         :label="$tc('blurElysiumSlider.cmsElement.config.imageFlowMode.label')"
                                                         v-model="element.config.imageFlowMode.value"
-                                                        class="bc-field__no-margin">
+                                                        class="bc-field__no-margin bc-field__inline-helptext bc-helptext__color-light">
                                                     </sw-switch-field>
                                                 {% endblock %}
                                             </div>
