--- a/src/Resources/app/storefront/src/scss/_elysium-slider.scss
+++ b/src/Resources/app/storefront/src/scss/_elysium-slider.scss
@@ -41,53 +41,37 @@
 
     &.image-flow-mode {
         padding: 0;
-
-        .cms-element-elysium-slide__container {
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-        }
     }    
 
-    &.slide-horizontal-alignment__center {
-        
-        .cms-element-elysium-slide__container {
-            text-align: center;
-        }
-    }
-
-    &.slide-horizontal-alignment__left {
+    &.content-container__box-mode {
 
         .cms-element-elysium-slide__container {
 
-            @include media-breakpoint-up( $blur-elysium-slide-horizontal-algnment-breakpoint ) {
-                margin-left: 0;
-                width: 50%
+            @include media-breakpoint-up( md ) {
+                flex: 0 1 50%;
+                max-width: 50%;
             }
         }
     }
 
-    &.slide-horizontal-alignment__right {
+    &.content-container__px-center,
+    &.content-container__px-center .cms-element-elysium-slide__image-flow-wrapper {
+        @extend .justify-content-center;
+    }
 
-        .cms-element-elysium-slide__container {
-
-            @include media-breakpoint-up( $blur-elysium-slide-horizontal-algnment-breakpoint ) {
-                margin-right: 0;
-                width: 50%
-            }
-        }
+    &.content-container__px-right,
+    &.content-container__px-right .cms-element-elysium-slide__image-flow-wrapper {
+        @extend .justify-content-end;
     }
 }
 
 .cms-element-elysium-slide__container {
-    @extend .container,
-    .d-flex,
+    @extend .d-flex,
     .flex-wrap,
     .flex-column,
     .align-items-start,
     .justify-content-center;
+    flex: 1 1 100%;
     height: 100%;
     max-width: 1000px;
     position: relative;
@@ -184,6 +168,19 @@
     bottom: 2rem;
     left: 0;
     width: 100%;
+}
+
+.cms-element-elysium-slide__image-flow-wrapper {
+    @extend .d-flex,
+    .flex-wrap,
+    .align-items-stretch,
+    .justify-content-start;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: $blur-elysium-slide-py $blur-elysium-slide-px;
 }
 
 /**
